--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Hello. I'm Jami Gibbs."
-email: 'jami0821@gmail.com'
-description: "I'm a software developer and designer from Chicago creating useful things for the web."
+title: "Hi! 👋 I'm Faith Losbanes."
+email: 'faithmarie.losbanes@gmail.com'
+description: "I think about the microbiome a lot. Trying my best to be a good biologist, environmentalist & plant mom."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jamigibbs.github.io/phantom" # the base hostname & protocol for your site, e.g. https://example.com
-twitter_username: 'jamigibbs'
-github_username: 'jamigibbs'
-medium_username: 'blog.jamigibbs.com'
+twitter_username: 'faithlosbanes'
+github_username: 'faithlosbanes'
+medium_username: 'https://medium.com/@faithlosbanes'
 
 # Build settings
 markdown: kramdown
