--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: "I think about the microbiome a lot. Trying my best to be a good bi
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jamigibbs.github.io/phantom" # the base hostname & protocol for your site, e.g. https://example.com
 twitter_username: 'faithlosbanes'
-github_username: 'faithlosbanes'
+github_username: 'faithlos'
 medium_username: 'https://medium.com/@faithlosbanes'
 
 # Build settings
